tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_frompairs_wrong_source_type.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Type error: expected sequence, found string @ example-templates/errors/frompairs-wrong-source-type.yaml:2:28 (errno: ERR_5001)
  -> data type mismatch

   1 | # !$fromPairs with source that's not a sequence  
   2 | test_frompairs: !$fromPairs "not_a_sequence"
     |                            ^^^^^^^^ expected sequence

   expected sequence, found string

   For more info: iidy explain ERR_5001
